2008-04-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_tokenise df_read_matrix): If missing or bad data is
	found in a matrix data file, print an int_warn() message, set the value
	to NaN if it isn't already, and return to the caller normally.
	This allows one to leave holes in a matrix data file.

2008-04-24  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm (PS_encode_image PS_image):  If the palette size is
	limited by "set palette maxcolors" then we need to rescale [0:maxcolors]
	to [0:bitwidth] for the packed representation of the image in PostScript
	Bug #1869824

2008-04-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.c (int_error):  Revert patch of 2008-04-19; it is not needed
	for 4.2

2008-04-19  Ethan A Merritt  <merritt@u.washington.edu>

	* term/sun.trm:  Rename local static variable "canvas" to "SUN_canvas"
	to avoid conflict with global of the same name.

	* src/util.c (int_error):  We really want to use snprintf(), but if the
	platform doesn't provide it (SunOS 4.1) what can you do?

2008-04-16  Ethan A Merritt  <merritt@u.washington.edu>

	* term/x11.trm:  Use a more finely sampled palette to generate colors.
	It was using only 500 samples; change it to use the default (=5000) in
	approximate_palette().
	Bug #1906502

2008-04-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/parse.c (parse_primary_expression) src/parse.h:
	Track highest data column referred to in an expression.

	* src/datafile.c (plot_option_using): Use info returned by perm_at()
	to update the highest data column used.  This allows us to catch at
	least the simple case of autotitle columnheader for 'using 1:($3)'.
	It also allows deletion of ugly code to approximate the same thing
	for binary files.
	Bug #1929227

2008-04-06  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm (PS_set_font): Avoid segfault if the font name is longer
	than 32 characters.  The {ai grass next openstep} terminals suffer from